fullSandbox11072023/force-app/main/default/objects/FOCUS_Profile__c/FOCUS_Profile__c.object-meta.xml
<CustomObject>
    <label>FOCUS Profile</label>
    <nameField>
        <displayFormat>F-{00000}</displayFormat>
        <label>FOCUS Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FOCUS Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>