fullSandbox11072023/force-app/main/default/objects/FOCUS_Profile__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FOCUS Profiles</relationshipLabel>
    <relationshipName>FOCUS_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>