fullSandbox11072023/force-app/main/default/objects/FOCUS_Profile__c/fields/Bard_Selling_In_Account__c.field-meta.xml
<CustomField>
    <fullName>Bard_Selling_In_Account__c</fullName>
    <label>Bard Selling In Account?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>