fullSandbox11072023/force-app/main/default/objects/FOCUS_Profile__c/fields/Clinical_Champion_s__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Champion_s__c</fullName>
    <label>Clinical Champion(s)</label>
    <type>TextArea</type>
</CustomField>