fullSandbox11072023/force-app/main/default/objects/FOCUS_Profile__c/fields/Competitive_Price_Turnpike__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Price_Turnpike__c</fullName>
    <label>Competitive Price Turnpike</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>