fullSandbox11072023/force-app/main/default/objects/FOCUS_Profile__c/fields/Competitive_Product__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Product__c</fullName>
    <label>Competitive Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corsair Pro</fullName>
                <default>true</default>
                <label>Corsair Pro</label>
            </value>
            <value>
                <fullName>Corsair Pro XS</fullName>
            </value>
            <value>
                <fullName>Mamba</fullName>
            </value>
            <value>
                <fullName>Teleport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>