fullSandbox11072023/force-app/main/default/objects/FOCUS_Profile__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <label>Current Status</label>
    <length>55</length>
    <type>Text</type>
</CustomField>