fullSandbox11072023/force-app/main/default/objects/FOCUS_Profile__c/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <label>End Customer #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>