fullSandbox11072023/force-app/main/default/objects/FOCUS_Profile__c/fields/Focus_Account_TP__c.field-meta.xml
<CustomField>
    <fullName>Focus_Account_TP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Focus Account (TurnPike)</label>
    <type>Checkbox</type>
</CustomField>