fullSandbox11072023/force-app/main/default/objects/FOCUS_Profile__c/fields/Notes_Guideliner__c.field-meta.xml
<CustomField>
    <fullName>Notes_Guideliner__c</fullName>
    <label>Notes Guideliner</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>