fullSandbox11072023/force-app/main/default/objects/FOCUS_Profile__c/fields/Notes_Turnpike__c.field-meta.xml
<CustomField>
    <fullName>Notes_Turnpike__c</fullName>
    <label>Notes Turnpike</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>