fullSandbox11072023/force-app/main/default/objects/FOCUS_Profile__c/fields/Plan_Of_Attack__c.field-meta.xml
<CustomField>
    <fullName>Plan_Of_Attack__c</fullName>
    <label>Plan Of Attack</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>