fullSandbox11072023/force-app/main/default/objects/FOCUS_Profile__c/fields/Stage_of_Action__c.field-meta.xml
<CustomField>
    <fullName>Stage_of_Action__c</fullName>
    <label>Stage of Action</label>
    <type>TextArea</type>
</CustomField>