fullSandbox11072023/force-app/main/default/objects/FOCUS_Profile__c/fields/Stage_of_Action_TurnPike__c.field-meta.xml
<CustomField>
    <fullName>Stage_of_Action_TurnPike__c</fullName>
    <label>Stage of Action TurnPike</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>APLOC Declined</fullName>
            </value>
            <value>
                <fullName>APLOC Signed</fullName>
            </value>
            <value>
                <fullName>Ascension</fullName>
            </value>
            <value>
                <fullName>Commitment In-Process</fullName>
            </value>
            <value>
                <fullName>HPG Access</fullName>
            </value>
            <value>
                <fullName>HPG Committed</fullName>
            </value>
            <value>
                <fullName>No Action Required</fullName>
            </value>
            <value>
                <fullName>Status Unknown</fullName>
            </value>
            <value>
                <fullName>TEA At Risk</fullName>
            </value>
            <value>
                <fullName>TEA Secure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>