fullSandbox11072023/force-app/main/default/objects/FOCUS_Profile__c/fields/Stents_Balloon_Business__c.field-meta.xml
<CustomField>
    <fullName>Stents_Balloon_Business__c</fullName>
    <label>Stents Balloon Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medtronic</fullName>
                <default>true</default>
                <label>Medtronic</label>
            </value>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>Abbott</fullName>
            </value>
            <value>
                <fullName>MDT/Boston</fullName>
            </value>
            <value>
                <fullName>MDT/Abbott</fullName>
            </value>
            <value>
                <fullName>Boston/Abbott</fullName>
            </value>
            <value>
                <fullName>MDT/Boston/Abbott</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>